fixing some font and spacing issues

--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -21,8 +21,8 @@ body{
     background-size: cover;
 }
 p {
-    color: #f3f3f3;
-    size: 24px;
+    color: #fdfbfb;
+    font-size: 20px;
 }
 h3{
     color: chartreuse;
@@ -67,5 +67,5 @@ sh2 {
     margin-left: 5px;
     box-shadow: 1px 2px 10px #070000;
     font-family: "caveat", sans-serif;
-    font-size: large;
+    font-size: 2vw;
 }
